增加导出Excel功能

--- a/getalldialog.ui
+++ b/getalldialog.ui
@@ -23,6 +23,19 @@
     </rect>
    </property>
   </widget>
+  <widget class="QPushButton" name="pushButton">
+   <property name="geometry">
+    <rect>
+     <x>400</x>
+     <y>670</y>
+     <width>131</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>导出到Excel表格</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
